--- a/chronos-frontend/src/app/application/home/home.component.html
+++ b/chronos-frontend/src/app/application/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<button mat-stroked-button>Basic</button>
+<button mat-stroked-button color="primary">Primary</button>
+<button mat-stroked-button color="accent">Accent</button>
+<button mat-stroked-button color="warn">Warn</button>
+<button mat-stroked-button disabled>Disabled</button>
+<a mat-stroked-button routerLink=".">Link</a>
