--- a/chronos-frontend/src/app/application/home/home.component.html
+++ b/chronos-frontend/src/app/application/home/home.component.html
@@ -1,3 +1,6 @@
+<p>
+    Este é o conteúdo da home!
+</p>
 <button mat-stroked-button>Basic</button>
 <button mat-stroked-button color="primary">Primary</button>
 <button mat-stroked-button color="accent">Accent</button>
