mudanças no sistema de arquivos do sass add !important pra sobrescrever classes do material

--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,5 +1,12 @@
 <div>
+    <mat-toolbar color="primary">
+        <mat-icon class="mat-icon-size-24">hourglass_full</mat-icon>
+        Chronos Time Tracker
+    </mat-toolbar>
+</div>
+
+<!-- <div>
     <div>este é o cabeçalho</div>
     <router-outlet></router-outlet>
     <footer>este é o rodapé</footer>
-</div>
+</div> -->
