--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,9 +1,9 @@
-<div>
+<!-- <div>
     <mat-toolbar color="primary">
         <mat-icon class="mat-icon-size-24">hourglass_full</mat-icon>
         Chronos Time Tracker
     </mat-toolbar>
-</div>
+</div> -->
 
 <!-- <div>
     <div>este é o cabeçalho</div>
