--- a/chronos-frontend/src/assets/scss/_variables.scss
+++ b/chronos-frontend/src/assets/scss/_variables.scss
@@ -1,11 +1,1 @@
-@import '~@angular/material/theming';
-
-// Copy the palettes from your selected theme (usually theme.scss).
-$app-primary: mat-palette($mat-deep-purple);
-$app-accent:  mat-palette($mat-light-blue);
-$app-warn:    mat-palette($mat-pink);
-
-// Create your Sass color vars (will be available in all the project)
-$primary: mat-color($app-primary);
-$accent: mat-color($app-accent);
-$warn: mat-color($app-warn);
+$primary: #F0F;
