--- a/chronos-frontend/src/app/login/login.component.scss
+++ b/chronos-frontend/src/app/login/login.component.scss
@@ -1,11 +1,6 @@
 @import "_variables";
 
-.content {
-    background-color: rgba($color: $primary, $alpha: 0.15);
-    height: 100%;
-}
-
-.content:before {
+.container:before {
     content: "";
     position: fixed;
     left: 0;
