ajustes pequenos de scss

--- a/chronos-frontend/src/app/login/login.component.html
+++ b/chronos-frontend/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="col-11 col-md-8 col-lg-4 mx-auto">
 
       <form [formGroup]="userForm" (submit)="onSubmit()" #formDir="ngForm">
-        <mdb-card>
+        <mdb-card class="50-opacity">
           <mdb-card-body>
             <mdb-card-title class="text-center text-primary">
               <h4>
@@ -26,7 +26,7 @@
 
             <div class="md-form mb-0" *ngIf="formDir.submitted && userForm.invalid">
               <div class="alert alert-danger" role="alert">
-                Preencha os dados do formulário corretamente!
+                Formulário inválido!
               </div>
             </div>
 
