--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,12 +1,28 @@
-<!-- <div>
-    <mat-toolbar color="primary">
-        <mat-icon class="mat-icon-size-24">hourglass_full</mat-icon>
-        Chronos Time Tracker
-    </mat-toolbar>
-</div> -->
+<header>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar">
+        <a class="navbar-brand" href="#">
+            <strong>
+                <i class="fas fa-hourglass"></i> Chronos Time Tracker
+            </strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav nav-flex-icons ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link">
+                        diego.dona <i class="fas fa-user"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">
+                        <i class="fas fa-sign-out-alt"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<!-- <div>
-    <div>este é o cabeçalho</div>
-    <router-outlet></router-outlet>
-    <footer>este é o rodapé</footer>
-</div> -->
+</header>
