--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,10 +1,9 @@
 <header>
-    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar"
-        [containerInside]="false">
+    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar" [containerInside]="false">
         <mdb-navbar-brand>
-            <a class="logo navbar-brand" href="#">
+            <div class="logo navbar-brand" >
                 <i class="fas fa-hourglass"></i> Chronos Time Tracker
-            </a>
+            </div>
         </mdb-navbar-brand>
         <links>
             <ul class="navbar-nav ml-auto">
