--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -1,11 +1,29 @@
 <header>
-    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar" [containerInside]="false">
+    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar"
+        [containerInside]="false">
         <mdb-navbar-brand>
-            <div class="logo navbar-brand" >
+            <div class="logo navbar-brand">
                 <i class="fas fa-hourglass"></i> Chronos Time Tracker
             </div>
         </mdb-navbar-brand>
         <links>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item waves-light active" mdbWavesEffect>
+                    <a class="nav-link">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item waves-light" mdbWavesEffect>
+                    <a class="nav-link">
+                        Cadastrar Projeto
+                    </a>
+                </li>
+                <li class="nav-item waves-light" mdbWavesEffect>
+                    <a class="nav-link">
+                        Apontar Horas
+                    </a>
+                </li>
+            </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link">
