--- a/chronos-frontend/src/assets/scss/_helpers.scss
+++ b/chronos-frontend/src/assets/scss/_helpers.scss
@@ -2,8 +2,8 @@
     width: 100%;
 }
 
-.text-center {
-    text-align: center;
+footer.page-footer .footer-copyright {
+    color: #FFF;
 }
 
 .mat-icon-size-18 { font-size: 18px; width: 18px; height: 18px; }
