--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -39,3 +39,8 @@
         </links>
     </mdb-navbar>
 </header>
+
+<footer class="page-footer font-small blue fixed-bottom text-white">
+    <div class="footer-copyright text-center py-3">© {{currentDate | date: 'yyyy'}} Copyright: Diego Doná
+    </div>
+</footer>
