exibindo as rotas

--- a/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-layout/app-layout.component.html
@@ -40,6 +40,10 @@
     </mdb-navbar>
 </header>
 
+<div class="container margin-header">
+    <router-outlet></router-outlet>
+</div>
+
 <footer class="page-footer font-small blue fixed-bottom text-white">
     <div class="footer-copyright text-center py-3">© {{currentDate | date: 'yyyy'}} Copyright: Diego Doná
     </div>
