--- a/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
@@ -8,18 +8,18 @@
         </mdb-navbar-brand>
         <links>
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item waves-light active" mdbWavesEffect>
-                    <a class="nav-link">
+                <li class="nav-item waves-light" mdbWavesEffect routerLinkActive="active">
+                    <a class="nav-link" [routerLink]="['/app/home']">
                         Home
                     </a>
                 </li>
-                <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link">
+                <li class="nav-item waves-light" mdbWavesEffect routerLinkActive="active">
+                    <a class="nav-link" [routerLink]="['/app/projetos']">
                         Projetos
                     </a>
                 </li>
-                <li class="nav-item waves-light" mdbWavesEffect>
-                    <a class="nav-link">
+                <li class="nav-item waves-light" mdbWavesEffect routerLinkActive="active">
+                    <a class="nav-link" [routerLink]="['/app/apontamentos']">
                         Apontamentos
                     </a>
                 </li>
