início da diretiva de erro custom

--- a/chronos-frontend/src/assets/scss/_forms.scss
+++ b/chronos-frontend/src/assets/scss/_forms.scss
@@ -10,3 +10,9 @@
         border-bottom: 1px solid $validation-error;
     }
 }
+
+.hint-error {
+    color: $validation-error;
+    font-size: 0.8rem;
+    font-style: italic;
+}
