--- a/chronos-frontend/src/app/login/login.component.html
+++ b/chronos-frontend/src/app/login/login.component.html
@@ -8,7 +8,7 @@
           <mdb-card-body>
             <mdb-card-title class="text-center text-primary">
               <h4>
-                  <mdb-icon fas icon="hourglass" class="mr-1"></mdb-icon>
+                  <mdb-icon fas icon="hourglass" class=""></mdb-icon>
                   Chronos Time Tracker
               </h4>
             </mdb-card-title>
@@ -16,18 +16,13 @@
 
             <div class="md-form" [class.invalid-form-control]="formDir.submitted && userForm.get('username').invalid">
               <input mdbInput type="text" id="username" class="form-control" formControlName="username" required>
-              <label for="username" class="required">Username</label>
+              <label for="username" class="required">Nome de Usuário</label>
+              <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('username')"></app-error-hint>
             </div>
 
             <div class="md-form" [class.invalid-form-control]="formDir.submitted && userForm.get('password').invalid">
               <input mdbInput type="password" id="password" class="form-control" formControlName="password" required>
               <label for="password" class="required">Senha</label>
-            </div>
-
-            <div class="md-form mb-0" *ngIf="formDir.submitted && userForm.invalid">
-              <div class="alert alert-danger" role="alert">
-                Formulário inválido!
-              </div>
             </div>
 
           </mdb-card-body>
