--- a/chronos-frontend/src/app/shared/components/error-hint/error-hint.component.html
+++ b/chronos-frontend/src/app/shared/components/error-hint/error-hint.component.html
@@ -1,3 +1,3 @@
-<div class="hint-error" *ngIf="refFormControl.invalid && (refFormControl.dirty || refFormControl.touched || refForm.submitted)">
+<div class="hint-error" *ngIf="errorState()">
   <span *ngIf="refFormControl.errors.required">Campo Obrigatório!</span>  
 </div>
