app-form-group comunicação entre componentes pai/filho para exibir validação na ui

--- a/chronos-frontend/src/app/login/login.component.html
+++ b/chronos-frontend/src/app/login/login.component.html
@@ -8,23 +8,27 @@
           <mdb-card-body>
             <mdb-card-title class="text-center text-primary">
               <h4>
-                  <mdb-icon fas icon="hourglass" class=""></mdb-icon>
-                  Chronos Time Tracker
+                <mdb-icon fas icon="hourglass" class=""></mdb-icon>
+                Chronos Time Tracker
               </h4>
             </mdb-card-title>
             <mdb-card-text class="text-center"> Se identifique para continuar</mdb-card-text>
 
-            <div class="md-form">
-              <input mdbInput type="text" id="username" class="form-control" formControlName="username" required>
-              <label for="username" class="required">Nome de Usuário</label>
-              <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('username')"></app-error-hint>
-            </div>
+            <app-form-group>
+              <div class="md-form">
+                <input mdbInput type="text" id="username" class="form-control" formControlName="username" required>
+                <label for="username" class="required">Nome de Usuário</label>
+                <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('username')"></app-error-hint>
+              </div>
+            </app-form-group>
 
-            <div class="md-form">
-              <input mdbInput type="password" id="password" class="form-control" formControlName="password" required>
-              <label for="password" class="required">Senha</label>
-              <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('password')"></app-error-hint>
-            </div>
+            <app-form-group>
+              <div class="md-form">
+                <input mdbInput type="password" id="password" class="form-control" formControlName="password" required>
+                <label for="password" class="required">Senha</label>
+                <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('password')"></app-error-hint>
+              </div>
+            </app-form-group>
 
           </mdb-card-body>
           <mdb-card-footer>
@@ -42,44 +46,3 @@
   </div>
 
 </div>
-
-<!-- <div fxLayout="row" fxLayoutAlign="center center" class="content background-image">
-    <div fxFlex="25" fxFlex.lt-md="60">
-  
-      <div class="welcome-text text-center m-b-sm">
-        Bem vindo ao Chronos Time Tracker
-      </div>
-  
-      <form [formGroup]="userForm" (submit)="onSubmit()">
-        <mat-card>
-  
-          <mat-card-content>
-            <div fxLayout="column">
-              <div fxFlex class="text-center">
-                <mat-icon class="mat-icon-size-48 text-primary">lock</mat-icon>
-              </div>
-              <div fxFlex>
-                <mat-form-field class="full-width">
-                  <input matInput placeholder="Username" name="username" formControlName="username" required>
-                  <mat-error *ngIf="userForm.get('username').invalid">Campo obrigatório</mat-error>
-                </mat-form-field>
-              </div>
-              <div fxFlex>
-                <mat-form-field class="full-width">
-                  <input matInput type="password" placeholder="Password" name="password" formControlName="password" required>
-                  <mat-error *ngIf="userForm.get('password').invalid">Campo obrigatório</mat-error>
-                </mat-form-field>
-              </div>
-            </div>
-          </mat-card-content>
-  
-          <mat-card-actions>
-            <button type="submit" mat-flat-button color="primary" class="m-r-sm">Login</button>
-            <button type="button" mat-stroked-button color="basic">Registrar-se</button>
-          </mat-card-actions>
-  
-        </mat-card>
-      </form>
-  
-    </div>
-  </div> -->
