--- a/chronos-frontend/src/styles.scss
+++ b/chronos-frontend/src/styles.scss
@@ -1,3 +1,9 @@
+// TOASTR
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import '~bootstrap/scss/mixins';
+@import "~ngx-toastr/toastr-bs4-alert.scss";
+
 @import "main";
 
 html, body {
