refatorando para email ao invés de username

--- a/chronos-frontend/src/app/shared/components/error-hint/error-hint.component.html
+++ b/chronos-frontend/src/app/shared/components/error-hint/error-hint.component.html
@@ -1,3 +1,4 @@
 <div class="hint-error" *ngIf="errorState()">
   <span *ngIf="refFormControl.errors.required">Campo Obrigatório!</span>  
+  <span *ngIf="refFormControl.errors.email">E-mail inválido!</span>  
 </div>
