--- a/chronos-frontend/src/app/login/login.component.html
+++ b/chronos-frontend/src/app/login/login.component.html
@@ -16,9 +16,9 @@
 
             <app-form-group>
               <div class="md-form">
-                <input mdbInput type="text" id="username" class="form-control" formControlName="username" required>
-                <label for="username" class="required">Nome de Usuário</label>
-                <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('username')"></app-error-hint>
+                <input mdbInput type="text" id="email" class="form-control" formControlName="email" required>
+                <label for="email" class="required">Email</label>
+                <app-error-hint [refForm]="formDir" [refFormControl]="userForm.get('email')"></app-error-hint>
               </div>
             </app-form-group>
 
