--- a/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
@@ -27,7 +27,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link">
-                        <i class="fas fa-user"></i> diego.dona
+                        <i class="fas fa-user"></i> {{name()}}
                     </a>
                 </li>
                 <li class="nav-item">
