--- a/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
+++ b/chronos-frontend/src/app/shared/layout/app-header/app-header.component.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">
+                    <a class="nav-link" (click)="logout()">
                         <i class="fas fa-sign-out-alt"></i> sair
                     </a>
                 </li>
