implementação do create user

--- a/chronos-frontend/src/app/registrar/registrar.component.html
+++ b/chronos-frontend/src/app/registrar/registrar.component.html
@@ -22,7 +22,7 @@
 
             <app-form-group>
               <div class="md-form">
-                <input mdbInput type="text" id="password" class="form-control" formControlName="password" required>
+                <input mdbInput type="password" id="password" class="form-control" formControlName="password" required>
                 <label for="password" class="required">Senha</label>
                 <app-error-hint [refForm]="formDir" [refFormControl]="registrarForm.get('password')"></app-error-hint>
               </div>
