botão para voltar

--- a/chronos-frontend/src/app/confirmar-email/confirmar-email.component.html
+++ b/chronos-frontend/src/app/confirmar-email/confirmar-email.component.html
@@ -13,4 +13,7 @@
       Neste e-mail constam mais instruções para que você possa concluir a verificação!
     </p>
   </div>
+  <div class="row col">
+      <a mdbBtn mdbWavesEffect [routerLink]="['/login']" color="primary">Voltar</a>
+  </div>
 </div>
