mergeMap + mudança de título

--- a/chronos-frontend/src/app/confirmar-email/confirmar-email.component.html
+++ b/chronos-frontend/src/app/confirmar-email/confirmar-email.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark blue scrolling-navbar text-white">
     <div class="container">
       <div class="mx-auto">
-        <h3>Olá {{nome}}, precisamos de sua ajuda!</h3>
+        <h3>Olá {{nome}}, apenas mais um passo antes de usar o CTT!</h3>
       </div>
     </div>
   </nav>
