--- a/chronos-frontend/src/app/application/projetos/projetos.component.html
+++ b/chronos-frontend/src/app/application/projetos/projetos.component.html
@@ -1,3 +1,18 @@
-<p>
-  projetos works!
-</p>
+<div class="row">
+
+  <!-- MASTER -->
+  <div class="col-sm-4">
+
+    <div class="card">
+      <ul class="list-group list-group-flush" *ngFor="let projeto of projetosList | async as list">
+        <li class="list-group-item hand-over" (click)="onClickProjeto(projeto)">{{projeto.titulo}}</li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- DETAIL -->
+  <div class="col-sm-8">
+
+  </div>
+</div>
